[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puppyping"
version = "0.1.0"
description = "Scrape puppy listings from PAWS Chicago."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "badbayesian"},
]
dependencies = 

[project.scripts]
puppyping = "puppyping.app:main"

[tool.setuptools]
packages = ["puppyping"]
