[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "puppyping"
version = "0.1.0"
description = "Scrape puppy listings from PAWS Chicago."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "badbayesian"},
]
dependencies = [
  "requests",
  "beautifulsoup4",
  "diskcache",
  "python-dotenv",
  "psycopg[binary]",
]

[project.scripts]
puppyping = "puppyping.server:main"
puppyping-healthcheck = "puppyping.healthcheck:main"

[tool.setuptools]
packages = ["puppyping"]
